--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon ./src/app",
+    "test":"jest ./src",
     "format":"prettier --write ./src"
   },
   "author": "Haigaz Soghmonian",
